# alerting-service

./: .env.example  .gitignore  Dockerfile  README.md  db.py  docker-compose.yml  init-db.py  pyproject.toml  pyrightconfig.json  requirements.txt  run-docker.sh  test_client.py
alertingSystem/: alerts.py  app.py  main.py  processing.py  subscriber.py
alertingSystem/errormon/: __init__.py  client.py
alertingSystem/pub_sub/: __init__.py  base.py  client.py  server.py
alertingSystem/utils/: logger.py
